Refactored source code for Java 11 and above
Added missing generic type definitions to ArrayList and HashSet
instantiations.

Refactored uses of deprecated API to suggested uses:

+ Converted Integer instantiations from "new Integer(intValue)" to
  "Integer.valueOf(intValue)".
+ Converted calls to "<class>.newInstance()" to
  "<class>.getDeclaredContructor(null).newInstance()" added exception
  handling as needed.
+ Replaced deprecated calls to "Runtime.exec(String)" to
  "Runtime.exec(String[])"
+ Any calls to deprecated token.getPosition() have been replaced with
  token.getOffset().